src/objects/ACETIDCardOrderStatusVerbiage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ACETIDCardOrderStatusVerbiageExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ACETIDCardOrderStatusVerbiageExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hover_Help_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hover Help Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ACETIDCardOrderStatusVerbiages</label>
</CustomObject>